Added 2 index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="portfolio-layer">
                 <h4>Next Home PG</h4>
                 <p>Wesite of a PG in Karve Nagar, Pune!</p>
-                <a href="https://www.youtube.com/"><i class='bx bx-link-external'></i></a>
+                <a href="https://innovatewithrizwan.github.io/PG-website/"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
 
