--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>Full Stack Developer Developer</h3>
+        <h3>Full Stack Developer</h3>
         <p>Hi, I’m Rizwan Mainuddin Shaikh, a passionate and driven web developer with a knack for creating visually appealing and highly functional websites. With a strong foundation in HTML, CSS, and JavaScript, I specialize in building responsive, user-friendly websites that help businesses and individuals establish their online presence.
 
             Over time, I’ve expanded my skills to offer services in graphic design and digital marketing, allowing me to provide a complete digital solution. I’m constantly learning and exploring new technologies to stay updated in the ever-evolving world of web development.
@@ -148,6 +148,14 @@
             <div class="portfolio-layer">
                 <h4>Interior Designer template</h4>
                 <p>Website template of a Interior Designer's businessman!</p>
+                <a href="#"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="gym-site.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Gym-website</h4>
+                <p>Website template of a gym!</p>
                 <a href="#"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
