--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="portfolio-layer">
                 <h4>Gym-website</h4>
                 <p>Website template of a gym!</p>
-                <a href="#"><i class='bx bx-link-external'></i></a>
+                <a href="https://innovatewithrizwan.github.io/gym/"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
     </div>
